# mcp-server/src/api-client.ts
@@ -194,6 +194,14 @@ export class MyCobotClient {
     return this.unwrap(await this.client.POST("/robot/stop"));
   }
 
+  async releaseAllServos() {
+    return this.unwrap(await this.client.POST("/robot/release"));
+  }
+
+  async powerOn() {
+    return this.unwrap(await this.client.POST("/robot/power_on"));
+  }
+
   async waitForMovement(timeout?: number, tolerance?: number) {
     return this.unwrap(
       await this.client.POST("/robot/wait", {
